# large_language_model_learning

./: Markdown.md  OpenManus.md  README.md  nanobot.md  openclaw.md  opencode.md
Tools/: bookmarks_4_19_26.html  links.txt  中文版-预训练流程图.excalidraw
cc/: my-cc-doge-code.patch  notes.txt
claude/: notes.txt
conda/: colab  jupyter_lab.txt  miniconda.txt
easy-dataset/: notes.txt
fine-tuning/: (original_correct_imporved_2) LLM LoRA Fine-Tuning Example.py  (original_correct_run) LLM LoRA Fine-Tuning Example.ipynb
gradio/: chatbot_ui.ipynb  notes.txt
huggingface/: hg.txt
kv_cache/: flash_attention.ipynb  flash_attention.py
langgraph/: example1.py  example_agent_tools.py  example_travel_iteneray_budget.py  notes.txt  test1.ipynb
langgraph/langserve/: LANGSERVER.md  README.md  chatbot.py  multi_agent.py  pyproject.toml  rag_agent.py  react_agent.py  server.py
langgraph/langserve/agents/: __init__.py  multi_agent.py
llama/: Modelfile  Modelfile1  llama.cpp
llama-factory/: ngrok.txt  notes.txt
ollama/: Modelfile  NoThinking  ollama.txt
other/: (original) Finetune-Llama3-with-LLaMA-Factory.ipynb  (original) LLM LoRA Fine-Tuning Example.ipynb  (original_correct) LLM LoRA Fine-Tuning Example.ipynb  (original_correct_imporved) LLM LoRA Fine-Tuning Example.py  (original_correct_imporved_2) LLM LoRA Fine-Tuning Example.py  finetune_tinyllama.py  gpu_compute.py  neural_network.py  pytorch_nn_example.py  qwen_transformers.py  read_parquet.py  test_cuda.py  train-00000-of-00001.parquet  train_5gb_gpu.py
skills/: notes.txt  references.txt
unsloth/: notes.txt  (+1 more)
(+215 files in other folders)
